# attack-surface-diff

./: .gitignore  README.md  pyproject.toml
attackdiff/: asset.py  cli.py  diff.py  doctor.py  main.py  output.py  storage.py
attackdiff/scanners/: nmap.py  scan.py  subfinder_scanner.py
